Bug fixes on signup site - background-color and scrollbar of the main area

--- a/less/base.less
+++ b/less/base.less
@@ -474,6 +474,12 @@ font-weight:normal; padding:15px; margin:0px;}
 		margin-left:0px;
 	}
 }
+
+#page-login-signup #region-main-inner div[role="main"]{
+	background-color:#ffffff;
+	padding:0px 20px 20px 20px;
+	margin-bottom:20px;
+}
 // ------------------------------------------------------------------------------
 // Dashboard-Seite
 .page-header-image img {
